Fixed panels causing page shift

--- a/admin/src/styles.css
+++ b/admin/src/styles.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+	scrollbar-gutter: stable;
+}
+
 #wpcontent {
 	padding-left: 0 !important;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
